--- a/00_module/servlet/src/main/webapp/index.html
+++ b/00_module/servlet/src/main/webapp/index.html
@@ -77,7 +77,7 @@
     </li>
     <li>SpringMVC - v3
         <ul>
-            <li><a href="/springmvc/v2/members">회원목록</a></li>
+            <li><a href="/springmvc/v3/members/new-form">회원가입</a></li>
             <li><a href="/springmvc/v3/members">회원목록</a></li>
         </ul>
     </li>
